[package]
name = "rust-kzg-zkcrypto"
version = "0.1.0"
edition = "2021"

[dependencies]
kzg = { path = "../kzg"}
kzg-bench = { path = "../kzg-bench" }
blst = {'git' = 'https://github.com/supranational/blst.git'}
pairing = "0.23.0"
bls12_381 = "0.8.0"
num-bigint = "0.4"
rand = { version = "0.8.5", optional = true }
rand_core = "0.6"
subtle = "2.5.0"
libc = { version = "0.2.148", default-features = false }
rayon = { version = "1.7.1", optional = true }
num_cpus = { version = "1.16.0", optional = true }
hex = "0.4.3"

[dependencies.ff]
version = "0.13"
default-features = false

[dev-dependencies]
criterion = "0.5.1"

[features]
default = [
    "std",
    "rand",
]
std = [
    "kzg/std",
    "libc/std",
]
rand = [
    "dep:rand",
    "kzg/rand",
]
parallel = [
    "dep:rayon",
    "dep:num_cpus",
]
minimal-spec = ["kzg/minimal-spec", "kzg-bench/minimal-spec"]



[[bench]]
name = "zero_poly"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "das"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "fk20"
harness = false

[[bench]]
name = "recover"
harness = false

[[bench]]
name = "eip_4844"
harness = false

[[bench]]
name = "lincomb"
harness = false
